Modify client address

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 
     <script>
     // WebSocketサーバに接続
-	var ws = new WebSocket('ws://172.16.145.136:8888/');
+	var ws = new WebSocket('ws://localhost:5000/');
     
     // エラー処理
 	ws.onerror = function(e){
