--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,48 +7,12 @@
 
     <script>
     // WebSocketサーバに接続
-	var ws = new WebSocket('ws://localhost:5000/');
-    
-    // エラー処理
-	ws.onerror = function(e){
-	  alert("Error");
-	}
-	
-	// WebSocketサーバ接続イベント
-	ws.onopen = function(e) {
-	  alert("Connect");
-	};
+	var socket = io.connect('http://localhost:5000/');
     
     // メッセージ受信イベントを処理
-	ws.onmessage = function(event) {
-	// 受信したメッセージを復元
-  var data = JSON.parse(event.data);
-  var item = $('<li/>').append(
-    $('<div/>').append(
-      $('<i/>').addClass('icon-user'),
-      $('<small/>').addClass('meta chat-time').append(data.time))
-  );
- 
-  // pushされたメッセージを解釈し、要素を生成する
-  if (data.type === 'join') {
-    item.addClass('alert alert-info')
-    .prepend('<button type="button" class="close" data-dismiss="alert">×</button>')
-    .children('div').children('i').after(data.user + 'が入室しました');
-  } else if (data.type === 'chat') {
-    item.addClass('well well-small')
-    .append($('<div/>').text(data.text))
-    .children('div').children('i').after(data.user);
-  } else if (data.type === 'defect') {
-    item.addClass('alert')
-    .prepend('<button type="button" class="close" data-dismiss="alert">×</button>')
-    .children('div').children('i').after(data.user + 'が退室しました');
-  } else {
-    item.addClass('alert alert-error')
-    .children('div').children('i').removeClass('icon-user').addClass('icon-warning-sign')
-      .after('不正なメッセージを受信しました');
-  }
-  $('#chat-history').prepend(item).hide().fadeIn(500);
-};
+	socket.on('message' {
+	  alert('Received.');
+	});
   
     $(function() {
       $('p').click(function() {
@@ -58,7 +22,7 @@
 
     function check1() {
       alert($("#text").val());
-      ws.send(JSON.stringify({
+      socket.emit(JSON.stringify({
       text: $("#text").val()
     }));
     }
