--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="socket.io/socket.io.js" type="text/javascript"></script>
+    <script src="../js/cookie.js" type="text/javascript"></script>
     <title>CookieTrader</title>
 
     <script>
@@ -37,6 +38,8 @@
   </head>
   <body>
     <h1><%= message %></h1>
+
+    <h2 class='cookieAmount'>0</h2>
 
     <p>おばけー（クリックしよう！）</p>
     <input type="text" id="text" value="" size="20">
