Add purchase button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,5 +58,12 @@
     <input type="button" onclick="purchase('Cursor');" value="Buy Cursor">
     <input type="button" onclick="purchase('Grandma');" value="Buy Grandma">
     <input type="button" onclick="purchase('Farm');" value="Buy Farm">
+    <input type="button" onclick="purchase('Factory');" value="Buy Factory">
+    <input type="button" onclick="purchase('Mine');" value="Buy Mine">
+    <input type="button" onclick="purchase('Shipment');" value="Buy Shipment">
+    <input type="button" onclick="purchase('AlchemyLab');" value="Buy AlchemyLab">
+    <input type="button" onclick="purchase('Portal');" value="Buy Portal">
+    <input type="button" onclick="purchase('TimeMachine');" value="Buy TimeMachine">
+    <input type="button" onclick="purchase('AntimatterCondenser');" value="Buy AntimatterCondenser">
   </body>
 </html>
