--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,10 @@
     socket.on('message', function(from, msg) {
       alert('Received.');
     });
+
+    socket.on('purchase', function(from,msg) {
+      alert('Purchased ' + msg);
+    });
   
     $(function() {
       $('p').click(function() {
@@ -33,6 +37,10 @@
       alert($("#text").val());
       socket.emit("message", $("#text").val());
     }
+
+    function purchase(itemName) {
+      socket.emit("purchase", {item: itemName, cookie: 1000});
+    }
     </script>
   </head>
   <body>
@@ -41,7 +49,6 @@
     <p>おばけー（クリックしよう！）</p>
     <input type="text" id="text" value="" size="20">
     <input type="button" onclick="check1();" value="Send">
-<<<<<<< HEAD
 
     <input type="button" onclick="purchase('Cursor');" value="Buy Cursor">
     <input type="button" onclick="purchase('Grandma');" value="Buy Grandma">
@@ -53,7 +60,6 @@
     <input type="button" onclick="purchase('Portal');" value="Buy Portal">
     <input type="button" onclick="purchase('TimeMachine');" value="Buy TimeMachine">
     <input type="button" onclick="purchase('AntimatterCondenser');" value="Buy AntimatterCondenser">
-=======
     
     <script>
       // アルファベットをランダムに10個表示
@@ -65,6 +71,5 @@
       document.write(message);
     </script>
     
->>>>>>> 43c3e790c249428e49d1cdf6d2e4aed7764e2746
   </body>
 </html>
