--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,78 +1,96 @@
-<!DOCTYPE HTML>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="socket.io/socket.io.js" type="text/javascript"></script>
-    <script src="../js/player.js" type="text/javascript"></script>
-    <script src="../js/connect.js" type="text/javascript"></script>
-    <title>CookieTrader</title>
+<!doctype html>
+<html role="application">
+<meta charset=utf-8>
+<title>Cookie Trader</title>
+<link rel="stylesheet" href="css/style.css">
+<body>
+<div id="wrapper">
+<div id="l-header">
+  <h1>Cookie Trader</h1>
+</div>
+<div id="l-container">
+  <div>
+    <table id="info">
+    <thead>
+      <tr><th>Global
+        <th>Me
+        <th>Player X
+        <th>Player Y
+        <th>Player Z
+    <tbody>
+      <tr><td><h2>Store</h2>
+        <div class="upgrades">
+          <div class="item">A</div>
+          <div class="item">B</div>
+          <div class="item">C</div>
+          <div class="item">D</div>
+        </div>
+        <td class="cps">1,000 Cookies<br>100 CpS
+        <td class="cps">1,000 Cookies<br>100 CpS
+        <td class="cps">1,000 Cookies<br>100 CpS
+        <td class="cps">1,000 Cookies<br>100 CpS
+      <tr><td>Cursor<br> 23 Cookie<br>Total 4
+        <td><div class="cps">3 x 1 CpS</div>
+          <div class="upgrades-mini">
+            <div class="item">A</div>
+            <div class="item">A</div>
+            <div class="item">A</div>
+            <div class="item">A</div>
+            <div class="item">A</div>
+            <div class="item">A</div>
+            <div class="item">A</div>
+            <div class="item">A</div>
+            <div class="item">A</div>
+            <div class="item">A</div>
+          </div>
+        <td><div class="cps">1 x 1 CpS</div>
+        <td><div class="cps">0 x 1 CpS</div>
+        <td><div class="cps">0 x 1 CpS</div>
+      <tr><td>Granma<br> 100 Cookie<br>Total 0
+        <td><div class="cps">0 x 5 CpS</div>
+        <td><div class="cps">0 x 5 CpS</div>
+        <td><div class="cps">0 x 5 CpS</div>
+        <td><div class="cps">0 x 5 CpS</div>
+      <tr><td>Farm<br> 500 Cookie<br>Total 0
+        <td><div class="cps">0 x 40 CpS</div>
+        <td><div class="cps">0 x 40 CpS</div>
+        <td><div class="cps">0 x 40 CpS</div>
+        <td><div class="cps">0 x 40 CpS</div>
+    </table>
+  </div>
+  <div class=typing>
+    <div>INPUTTHISTEXT....</div>
+  </div>
+</div>
+<div id="l-footer">
+  This application inspires to <a href="http://orteil.dashnet.org/cookieclicker/">Cookie Clicker</a>
+</div>
+</div>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="/socket.io/socket.io.js" type="text/javascript"></script>
+<script src="/js/player.js" type="text/javascript"></script>
+<script>
+$(function() {
 
-    <script>
-    $(function() {
-      $('p').click(function() {
-        $(this).fadeOut('slow');
-      });
-    });
-    
-    function check1() {
-      socket.emit("message", $("#text").val());
-    }
-    
-    // キーボード入力時に実行されるイベント
-    document.onkeydown = function(e) {
-      var shift, ctrl;
-      
-      // Mozilla(Firefox, NN) and Opera
-      if(e != null) {
-        keycode = e.which;
-        ctrl  = typeof e.modifiers == 'undefined' ? e.ctrlKey  : e.modifiers & Event.CONTROL_MASK;
-        shift = typeof e.modifiers == 'undefined' ? e.shiftKey : e.modifiers & Event.SHIFT_MASK;
-        e.preventDefault();
-        e.stopPropagation();
-      // Internet Explorer
-      } else {
-        keycode = event.keycode;
-        ctrl = event.etrlKey;
-        shift = event.shiftKey;
-        e.returnValue = false;
-        e.cancelBubble = true;
-      }
-      
-      var keychar = String.fromCharCode(keycode).toLowerCase();
-      console.log("Key: " + keychar);
-    }
-    
-    </script>
-  </head>
-  <body>
-    <h1><%= message %></h1>
-    <h2 class="totalCookie">0</h2>
+  // WebSocketサーバに接続
+  var socket = io.connect('http://localhost:5000/');
 
-    <p>おばけー（クリックしよう！）</p>
-    <input type="text" id="text" value="" size="20">
-    <input type="button" onclick="check1();" value="Send">
-    <input type="button" class="Cursor" value="Buy Cursor">
-    <input type="button" class="Grandma" value="Buy Grandma">
-    <input type="button" class="Farm" value="Buy Farm">
-    <input type="button" class="Factory" value="Buy Factory">
-    <input type="button" class="Mine" value="Buy Mine">
-    <input type="button" class="Shipment" value="Buy Shipment">
-    <input type="button" class="AlchemyLab" value="Buy AlchemyLab">
-    <input type="button" class="Portal" value="Buy Portal">
-    <input type="button" class="TimeMachine" value="Buy TimeMachine">
-    <input type="button" class="AntimatterCondenser" value="Buy AntimatterCondenser">
+  socket.on('connect', function(){
+    console.log('connect!')
+  });
 
-    <script>
-      // アルファベットをランダムに10個表示
-      var message = "";
-      var alphabet = "qwertyuiopasdfghjklzxcvbnm";
-      var size = alphabet.length;
-      for(var i = 0; i < 10; i++) {
-        message += alphabet.charAt((Math.random() * size) % size);
-      }
-      document.write(message);
+  socket.on('disconnect', function(){
+    console.log("disconnect from server");
+  });
 
-    </script>
-  </body>
-</html>
+  // メッセージ受信イベントを処理
+  socket.on('message', function(from, msg) {
+    console.log('Received : ' + msg);
+  });
+
+  $(document).keydown(function (e) {
+    console.log(e);
+  });
+
+});
+</script>
