--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,25 +5,10 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="socket.io/socket.io.js" type="text/javascript"></script>
     <script src="../js/player.js" type="text/javascript"></script>
+    <script src="../js/connect.js" type="text/javascript"></script>
     <title>CookieTrader</title>
 
     <script>
-    // WebSocketサーバに接続
-    var socket = io.connect('http://localhost:5000/');
-
-    socket.on('connect', function(){
-      console.log('connect!')
-    });
-    
-    socket.on('disconnect', function(){
-      console.log("disconnect from server");
-    });
-    
-    // メッセージ受信イベントを処理
-    socket.on('message', function(from, msg) {
-      alert('Received.');
-    });
-  
     $(function() {
       $('p').click(function() {
         $(this).fadeOut('slow');
@@ -31,7 +16,6 @@
     });
     
     function check1() {
-      alert($("#text").val());
       socket.emit("message", $("#text").val());
     }
     
@@ -56,9 +40,7 @@
       }
       
       var keychar = String.fromCharCode(keycode).toLowerCase();
-      if(keychar == 'a') {
-        alert('OK');
-      }
+      console.log("Key: " + keychar);
     }
     
     </script>
@@ -85,8 +67,9 @@
       // アルファベットをランダムに10個表示
       var message = "";
       var alphabet = "qwertyuiopasdfghjklzxcvbnm";
+      var size = alphabet.length;
       for(var i = 0; i < 10; i++) {
-        message += alphabet.charAt((Math.random()*26)%26);
+        message += alphabet.charAt((Math.random() * size) % size);
       }
       document.write(message);
 
