--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,7 @@
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-<script src="/js/player.js" type="text/javascript"></script>
+<script src="/js/game.js" type="text/javascript"></script>
 <script>
 $(function() {
 
@@ -85,6 +85,8 @@ $(function() {
   player.hook('currentCps', function (v) {
     $('#my-cps').text(v);
   });
+  player.totalCookie = 1000;
+  player.currentCps = 0;
 
   // WebSocketサーバに接続
   var socket = io.connect('http://localhost:5000/');
@@ -106,9 +108,8 @@ $(function() {
     var status = obj.status;
     if (status === 'ok') {
       var bakeryName = obj.bakeryName,
-          price = parseInt(obj.price, 10),
-          cps = 10;
-      player.buy(bakeryName, price, cps);
+          price = parseInt(obj.price, 10);
+      player.buy(bakeryName, price);
     } else {
       // TODO
     }
