Translate js in index.ejs to a separated coffee script file.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,75 +69,4 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js" type="text/javascript"></script>
 <script src="/js/game.js" type="text/javascript"></script>
-<script>
-$(function() {
-
-  var pretty = function (val) {
-    return '' + Math.floor(val);
-  };
-
-  var FPS = 10;
-
-  var player = new Player(0, 10);
-  player.hook('totalCookie', function (v) {
-    $('#my-total-cookie').text(pretty(player.totalCookie));
-  });
-  player.hook('currentCps', function (v) {
-    $('#my-cps').text(v);
-  });
-  player.totalCookie = 1000;
-  player.currentCps = 0;
-
-  // WebSocketサーバに接続
-  var socket = io.connect('http://localhost:5000/');
-
-  socket.on('connect', function(){
-    console.log('connect!')
-  });
-
-  socket.on('disconnect', function(){
-    console.log("disconnect from server");
-  });
-
-  // メッセージ受信イベントを処理
-  socket.on('message', function(msg) {
-    console.log('Received : ' + msg);
-  });
-
-  socket.on('buy', function (obj) {
-    var status = obj.status;
-    if (status === 'ok') {
-      var bakeryName = obj.bakeryName,
-          price = parseInt(obj.price, 10);
-      player.buy(bakeryName, price);
-    } else {
-      // TODO
-    }
-  });
-
-  $(document).keydown(function (e) {
-    if (e.keyCode === 32 || e.keyCode === 13) {
-      player.clickCookie();
-    }
-  });
-
-  $('.item').click(function (e) {
-    var id = e.target.id;
-    id.match(/bakery-(.+)/);
-    var bakeryName = RegExp.$1;
-    socket.emit('buy', { 'bakery': bakeryName, 'totalCookie': player.totalCookie })
-  });
-
-  var prevTime = new Date().getTime();
-  var loop = function() {
-    var curTime = new Date().getTime();
-
-    player.bake((curTime - prevTime) / 1000);
-
-    prevTime = curTime;
-    setTimeout(loop, 1000 / FPS);
-  };
-  loop();
-
-});
-</script>
+<script src="/js/client.js" type="text/javascript"></script>
