--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
 <div id="wrapper" class="l-h-flex">
 <header>
   <h1>Cookie Trader</h1>
+  <input id="player-name" type="text" />
+  <button id="participate-button">Participate</button>
 </header>
 <main class="l-flex-item l-v-flex">
   <div class="l-flex-item l-h-flex">
