--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,4 +49,45 @@ footer { background-color: #fee; }
 .bakery-item:nth-child(9) { background-color: hsl(160, 50%, 85%); }
 .bakery-item:nth-child(10) { background-color: hsl(180, 50%, 85%); }
 
+#cover {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
 
+#initial-form {
+  position: relative;
+  margin-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 60px 40px;
+  width: 600px;
+  height: 140px;
+  background-color: #FFFFFF;
+}
+
+#initial-form input {
+  margin-left: auto;
+  margin-right: auto;
+  width: 592px;
+  height: 40px;
+  font-size: 32px;
+
+  border: 3px solid #DDD;
+}
+
+#initial-form button {
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+  height: 60px;
+  font-size: 32px;
+
+  background: #EEE;
+  border: 3px solid #DDD;
+  color: #111;
+}
