--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,6 @@
 <div id="wrapper" class="l-h-flex">
 <header>
   <h1>Cookie Trader</h1>
-  <input id="player-name" type="text" />
-  <button id="participate-button">Participate</button>
 </header>
 <main class="l-flex-item l-v-flex">
   <div class="l-flex-item l-h-flex">
@@ -41,6 +39,12 @@
   This application inspires to <a href="http://orteil.dashnet.org/cookieclicker/">Cookie Clicker</a>
 </footer>
 </div><!-- /wrapper -->
+<div id="cover">
+  <div id="initial-form">
+    <input id="player-name" type="text" placeholder="Username" /><br>
+    <button id="participate-button" >Participate</button>
+  </div>
+</div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="/js/vendor/underscore.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js" type="text/javascript"></script>
