Always try to fetch all players' info

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,16 +22,46 @@
     <div>
     </div>
     <div class="bakeries">
-      <div id="bakery-Cursor" class="bakery-item">Pointer</div>
-      <div id="bakery-Grandma" class="bakery-item">Grandma</div>
-      <div id="bakery-Farm" class="bakery-item">Farm</div>
-      <div id="bakery-Factory" class="bakery-item">Factory</div>
-      <div id="bakery-Mine" class="bakery-item">Mine</div>
-      <div id="bakery-Shipment" class="bakery-item">Shipment</div>
-      <div id="bakery-AlchemyLab" class="bakery-item">AlchemyLab</div>
-      <div id="bakery-Portal" class="bakery-item">Portal</div>
-      <div id="bakery-TimeMachine" class="bakery-item">Time Machine</div>
-      <div id="bakery-AntimatterCondenser" class="bakery-item">Antimatter Condenser</div>
+      <div id="bakery-Cursor" class="bakery-item">
+        <span>Pointer</span><br>
+        <span class="bakery-price">100</span>
+      </div>
+      <div id="bakery-Grandma" class="bakery-item">
+        <span>Grandma</span><br>
+        <span class="bakery-price">100</span>
+      </div>
+      <div id="bakery-Farm" class="bakery-item">
+        <span>Farm</span><br>
+        <span class="bakery-price">100</span>
+      </div>
+      <div id="bakery-Factory" class="bakery-item">
+        <span>Factory</span><br>
+        <span class="bakery-price">100</span>
+      </div>
+      <div id="bakery-Mine" class="bakery-item">
+        <span>Mine</span><br>
+        <span class="bakery-price">100</span>
+      </div>
+      <div id="bakery-Shipment" class="bakery-item">
+        <span>Shipment</span><br>
+        <span class="bakery-price">100</span>
+      </div>
+      <div id="bakery-AlchemyLab" class="bakery-item">
+        <span>AlchemyLab</span><br>
+        <span class="bakery-price">100</span>
+      </div>
+      <div id="bakery-Portal" class="bakery-item">
+        <span>Portal</span><br>
+        <span class="bakery-price">100</span>
+      </div>
+      <div id="bakery-TimeMachine" class="bakery-item">
+        <span>Time Machine</span><br>
+        <span class="bakery-price">100</span>
+      </div>
+      <div id="bakery-AntimatterCondenser" class="bakery-item">
+        <span>Antimatter Condenser</span><br>
+        <span class="bakery-price">100</span>
+      </div>
     </div>
   </div>
 </main>
