--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
       You bake <span id="my-cps">0.0</span> cookies per seconds.
     </div>
     <div id="type-block">
-      <p>Typing here.
+      <p>Typing: <span id="typing-text"></span>
     </div>
   </div>
   <div id="action-block">
