--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,12 @@ html, body { margin: 0; padding: 0; width: 100%; height: 100%; }
 header { background-color: #efe; }
 footer { background-color: #fee; }
 #info-block { background-color: #ffe; }
-#type-block { background-color: #fef; }
+#type-block { 
+  background-color: #fef;
+  font-family: 'Inconsolata', sans-serif;
+  font-weight: 700;
+  font-size: 200%;
+}
 #action-block { background-color: #eff; }
 
 /* bakery module */
