--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,11 @@
 /* RESET */
-html, body { margin: 0; padding: 0; width: 100%; height: 100%; }
+html, body { margin: 0; padding: 0; width: 100%; height: 100%;
+  font-family: 'Kavoon', cursive;
+}
+
+h1 {
+font-size: 300%;
+}
 
 /* Layouts */
 #wrapper { height: 100%; }
@@ -19,40 +25,77 @@ html, body { margin: 0; padding: 0; width: 100%; height: 100%; }
 	flex: 1;
 }
 /* specific layout */
-#action-block { width: 250px; position: relative; }
-
+#action-block {
+  width: 350px;
+  position: relative; }
 
 /* DEBUG COLOR */
-header { background-color: #efe; }
+header {
+  color: #fff;
+  background-color: #111; 
+}
 footer { background-color: #fee; }
-#info-block { background-color: #ffe; }
+#info-block {
+  color: #fff;
+  background-color: #266588;
+  font-size: 200%;
+}
 #type-block { 
   background-color: #fef;
-  font-family: 'Inconsolata', sans-serif;
-  font-weight: 700;
-  font-size: 200%;
+  font-size: 300%;
 }
 #action-block { background-color: #eff; }
 
 /* bakery module */
 .bakeries {
 	position: absolute;
-	top: 0; bottom: 0; left: 0; right: 0;
+	top: 40px; bottom: 0; left: 0; right: 0;
 	overflow: auto;
 }
-.bakery-item {
-	height: 50px;
+
+.bakery-title {
+	position: absolute;
+	top: 0; bottom: 0; left: 0; right: 0;
+	overflow: auto;
+  background-color: #211;
+  color: #fff;
+  font-size: 200%;
+  height: 40px;
 }
-.bakery-item:nth-child(1) { background-color: hsl(0, 50%, 85%); }
-.bakery-item:nth-child(2) { background-color: hsl(20, 50%, 85%); }
-.bakery-item:nth-child(3) { background-color: hsl(40, 50%, 85%); }
-.bakery-item:nth-child(4) { background-color: hsl(60, 50%, 85%); }
-.bakery-item:nth-child(5) { background-color: hsl(80, 50%, 85%); }
-.bakery-item:nth-child(6) { background-color: hsl(100, 50%, 85%); }
-.bakery-item:nth-child(7) { background-color: hsl(120, 50%, 85%); }
-.bakery-item:nth-child(8) { background-color: hsl(140, 50%, 85%); }
-.bakery-item:nth-child(9) { background-color: hsl(160, 50%, 85%); }
-.bakery-item:nth-child(10) { background-color: hsl(180, 50%, 85%); }
+.bakery-item {
+  color: #fff;
+  font-size: 180%;
+  height: 85px;
+  cursor: pointer;
+}
+.bakery-price {
+  font-size: 75%;
+  font-weight: bold;
+  font-family: Tahoma,Arial,sans-serif;
+  /*font-family: sans-serif;*/
+}
+.bakery-item:nth-child(1) { background-color: hsl(0, 50%, 15%); }
+.bakery-item:nth-child(2) { background-color: hsl(20, 50%, 15%); }
+.bakery-item:nth-child(3) { background-color: hsl(40, 50%, 15%); }
+.bakery-item:nth-child(4) { background-color: hsl(60, 50%, 15%); }
+.bakery-item:nth-child(5) { background-color: hsl(80, 50%, 15%); }
+.bakery-item:nth-child(6) { background-color: hsl(100, 50%, 15%); }
+.bakery-item:nth-child(7) { background-color: hsl(120, 50%, 15%); }
+.bakery-item:nth-child(8) { background-color: hsl(140, 50%, 15%); }
+.bakery-item:nth-child(9) { background-color: hsl(160, 50%, 15%); }
+.bakery-item:nth-of-type(10) { background-color: hsl(180, 50%, 15%); }
+
+
+.bakery-item:nth-child(1):hover { background-color: hsl(0,50%,30%); }
+.bakery-item:nth-child(2):hover { background-color: hsl(20,50%,30%); }
+.bakery-item:nth-child(3):hover { background-color: hsl(40,50%,30%); }
+.bakery-item:nth-child(4):hover { background-color: hsl(60,50%,30%); }
+.bakery-item:nth-child(5):hover { background-color: hsl(80,50%,30%); }
+.bakery-item:nth-child(6):hover { background-color: hsl(100,50%,30%); }
+.bakery-item:nth-child(7):hover { background-color: hsl(120,50%,30%); }
+.bakery-item:nth-child(8):hover { background-color: hsl(140,50%,30%); }
+.bakery-item:nth-child(9):hover { background-color: hsl(160,50%,30%); }
+.bakery-item:nth-child(10):hover { background-color: hsl(180,50%,30%); }
 
 #cover {
   position: absolute;
