--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,84 +1,90 @@
 <!doctype html>
 <html role="application">
-<meta charset=utf-8>
-<title>Cookie Trader</title>
-<link rel="stylesheet" href="css/style.css">
-<body>
-<div id="wrapper" class="l-h-flex">
-<header>
-  <h1>Cookie Trader</h1>
-</header>
-<main class="l-flex-item l-v-flex">
-  <div class="l-flex-item l-h-flex">
-    <div id="info-block" class="l-flex-item">
-      You have <span id="my-total-cookie">0</span> cookies.<br>
-      You bake <span id="my-cps">0.0</span> cookies per seconds.
+  <meta charset=utf-8>
+  <title>Cookie Trader</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href='http://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet' type='text/css'>
+  <body>
+    <div id="wrapper" class="l-h-flex">
+      <header>
+      <h1>Cookie Trader</h1>
+      </header>
+      <main class="l-flex-item l-v-flex">
+      <div class="l-flex-item l-h-flex">
+        <div id="info-block" class="l-flex-item">
+        <img src="img/cookie-48.png">
+          You have <span id="my-total-cookie">0</span> cookies.<br>
+        <img src="img/cookie-48.png">
+          You bake <span id="my-cps">0.0</span> cookies per seconds.
+        </div>
+        <div id="type-block">
+          <p>Typing: <span id="typing-text"></span>
+        </div>
+      </div>
+      <div id="action-block">
+        <div>
+        </div>
+        <div class="bakery-title">
+          <span>Store</span><br>
+        </div>
+        <div class="bakeries">
+          <div id="bakery-Cursor" class="bakery-item">
+            <span>Pointer</span><br>
+            <span class="bakery-price"></span>
+          </div>
+          <div id="bakery-Grandma" class="bakery-item">
+            <span>Grandma</span><br>
+            <span class="bakery-price"></span>
+          </div>
+          <div id="bakery-Farm" class="bakery-item">
+            <span>Farm</span><br>
+            <span class="bakery-price"></span>
+          </div>
+          <div id="bakery-Factory" class="bakery-item">
+            <span>Factory</span><br>
+            <span class="bakery-price"></span>
+          </div>
+          <div id="bakery-Mine" class="bakery-item">
+            <span>Mine</span><br>
+            <span class="bakery-price"></span>
+          </div>
+          <div id="bakery-Shipment" class="bakery-item">
+            <span>Shipment</span><br>
+            <span class="bakery-price"></span>
+          </div>
+          <div id="bakery-AlchemyLab" class="bakery-item">
+            <span>AlchemyLab</span><br>
+            <span class="bakery-price"></span>
+          </div>
+          <div id="bakery-Portal" class="bakery-item">
+            <span>Portal</span><br>
+            <span class="bakery-price"></span>
+          </div>
+          <div id="bakery-TimeMachine" class="bakery-item">
+            <span>Time Machine</span><br>
+            <span class="bakery-price"></span>
+          </div>
+          <div id="bakery-AntimatterCondenser" class="bakery-item">
+            <span>Antimatter Condenser</span><br>
+            <span class="bakery-price"></span>
+          </div>
+        </div>
+      </div>
+      </main>
+      <footer>
+      This application inspires to <a href="http://orteil.dashnet.org/cookieclicker/">Cookie Clicker</a>
+      </footer>
+    </div><!-- /wrapper -->
+    <div id="cover">
+      <div id="initial-form">
+        <input id="player-name" type="text" placeholder="Username" /><br>
+        <button id="participate-button" >Participate</button>
+      </div>
     </div>
-    <div id="type-block">
-      <p>Typing: <span id="typing-text"></span>
-    </div>
-  </div>
-  <div id="action-block">
-    <div>
-    </div>
-    <div class="bakeries">
-      <div id="bakery-Cursor" class="bakery-item">
-        <span>Pointer</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-      <div id="bakery-Grandma" class="bakery-item">
-        <span>Grandma</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-      <div id="bakery-Farm" class="bakery-item">
-        <span>Farm</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-      <div id="bakery-Factory" class="bakery-item">
-        <span>Factory</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-      <div id="bakery-Mine" class="bakery-item">
-        <span>Mine</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-      <div id="bakery-Shipment" class="bakery-item">
-        <span>Shipment</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-      <div id="bakery-AlchemyLab" class="bakery-item">
-        <span>AlchemyLab</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-      <div id="bakery-Portal" class="bakery-item">
-        <span>Portal</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-      <div id="bakery-TimeMachine" class="bakery-item">
-        <span>Time Machine</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-      <div id="bakery-AntimatterCondenser" class="bakery-item">
-        <span>Antimatter Condenser</span><br>
-        <span class="bakery-price">100</span>
-      </div>
-    </div>
-  </div>
-</main>
-<footer>
-  This application inspires to <a href="http://orteil.dashnet.org/cookieclicker/">Cookie Clicker</a>
-</footer>
-</div><!-- /wrapper -->
-<div id="cover">
-  <div id="initial-form">
-    <input id="player-name" type="text" placeholder="Username" /><br>
-    <button id="participate-button" >Participate</button>
-  </div>
-</div>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="/js/vendor/underscore.js" type="text/javascript"></script>
-<script src="/socket.io/socket.io.js" type="text/javascript"></script>
-<script src="/js/bakery.js" type="text/javascript"></script>
-<script src="/js/equip.js" type="text/javascript"></script>
-<script src="/js/player.js" type="text/javascript"></script>
-<script src="/js/client.js" type="text/javascript"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="/js/vendor/underscore.js" type="text/javascript"></script>
+    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+    <script src="/js/bakery.js" type="text/javascript"></script>
+    <script src="/js/equip.js" type="text/javascript"></script>
+    <script src="/js/player.js" type="text/javascript"></script>
+    <script src="/js/client.js" type="text/javascript"></script>
