--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,43 +29,53 @@
         </div>
         <div class="bakeries">
           <div id="bakery-Cursor" class="bakery-item">
-            <span>Pointer</span><br>
+            <span class="bakery-name">Pointer</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
           <div id="bakery-Grandma" class="bakery-item">
-            <span>Grandma</span><br>
+            <span class="bakery-name">Grandma</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
           <div id="bakery-Farm" class="bakery-item">
-            <span>Farm</span><br>
+            <span class="bakery-name">Farm</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
           <div id="bakery-Factory" class="bakery-item">
-            <span>Factory</span><br>
+            <span class="bakery-name">Factory</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
           <div id="bakery-Mine" class="bakery-item">
-            <span>Mine</span><br>
+            <span class="bakery-name">Mine</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
           <div id="bakery-Shipment" class="bakery-item">
-            <span>Shipment</span><br>
+            <span class="bakery-name">Shipment</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
           <div id="bakery-AlchemyLab" class="bakery-item">
-            <span>AlchemyLab</span><br>
+            <span class="bakery-name">AlchemyLab</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
           <div id="bakery-Portal" class="bakery-item">
-            <span>Portal</span><br>
+            <span class="bakery-name">Portal</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
           <div id="bakery-TimeMachine" class="bakery-item">
-            <span>Time Machine</span><br>
+            <span class="bakery-name">Time Machine</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
           <div id="bakery-AntimatterCondenser" class="bakery-item">
-            <span>Antimatter Condenser</span><br>
+            <span class="bakery-name">Antimatter Condenser</span><br>
+            <img src="img/cookie-24.png">
             <span class="bakery-price"></span>
           </div>
         </div>
