--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,11 @@
 /* RESET */
 html, body { margin: 0; padding: 0; width: 100%; height: 100%;
   font-family: 'Kavoon', cursive;
+  user-select: none; /* CSS3 */
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none; /* IE10- */
+  cursor: default;
 }
 
 h1 {
@@ -24,10 +29,23 @@ font-size: 300%;
 .l-v-flex>.l-flex-item {
 	flex: 1;
 }
+.column{
+  display: table-cell;
+  width: 100px;
+}
+
 /* specific layout */
+#info-block {
+  padding: 0 10px;
+}
 #action-block {
+  position: relative;
+  color: #fff;
+}
+
+#bakery-column {
   width: 350px;
-  position: relative; }
+}
 
 /* DEBUG COLOR */
 header {
@@ -44,30 +62,42 @@ footer { background-color: #fee; }
   background-color: #fef;
   font-size: 300%;
 }
-#action-block { background-color: #eff; }
+#action-block { 
+  background-color: #266588;
+	overflow: auto;
+}
+
+/* column */
+.column:nth-child(2n) .column-title {
+  background-color: #222;
+}
+.column:nth-child(2n+1) .column-title {
+  background-color: #555;
+}
 
 /* bakery module */
 .bakeries {
-	position: absolute;
-	top: 40px; bottom: 0; left: 0; right: 0;
+	position: relative;
+	top: 0; bottom: 0; left: 0; right: 0;
 	overflow: auto;
 }
 
 .bakery-title {
-	position: absolute;
+	position: relative;
 	top: 0; bottom: 0; left: 0; right: 0;
-	overflow: auto;
   background-color: #211;
   color: #fff;
+  padding: 0 5px;
   font-size: 200%;
   height: 40px;
 }
 .bakery-item {
   color: #fff;
   font-size: 180%;
-  height: 85px;
+  height: 75px;
   cursor: pointer;
   text-shadow:0px 0px 6px #000,0px 1px 1px #000;
+  padding: 2px 5px;
 }
 .bakery-name {
 }
@@ -99,6 +129,56 @@ footer { background-color: #fee; }
 .bakery-item:nth-child(8):hover { background-color: hsl(140, 50%, 50%); }
 .bakery-item:nth-child(9):hover { background-color: hsl(160, 50%, 50%); }
 .bakery-item:nth-child(10):hover { background-color: hsl(180, 50%, 50%); }
+
+/* sell */
+
+.column-title {
+	position: relative;
+	top: 0; bottom: 0; left: 0; right: 0;
+  background-color: #211;
+  color: #fff;
+  padding: 0 5px;
+  font-size: 200%;
+  height: 40px;
+  width: 150px;
+}
+
+.my-item {
+  color: #fff;
+  height: 75px;
+  cursor: pointer;
+  text-shadow:0px 0px 6px #000,0px 1px 1px #000;
+  padding: 2px 5px;
+}
+
+.bakery-sell {
+  font-size:150%;
+  font-weight: bold;
+  font-family: Tahoma,Arial,sans-serif;
+  color: #f66;
+}
+
+.my-item:nth-child(1) { background-color: hsl(0, 30%, 30%); }
+.my-item:nth-child(2) { background-color: hsl(20, 30%, 30%); }
+.my-item:nth-child(3) { background-color: hsl(40, 30%, 30%); }
+.my-item:nth-child(4) { background-color: hsl(60, 30%, 30%); }
+.my-item:nth-child(5) { background-color: hsl(80, 30%, 30%); }
+.my-item:nth-child(6) { background-color: hsl(100, 30%, 30%); }
+.my-item:nth-child(7) { background-color: hsl(120, 30%, 30%); }
+.my-item:nth-child(8) { background-color: hsl(140, 30%, 30%); }
+.my-item:nth-child(9) { background-color: hsl(160, 30%, 30%); }
+.my-item:nth-of-type(10) { background-color: hsl(180, 30%, 30%); }
+
+.my-item:nth-child(1):hover { background-color: hsl(0, 30%, 50%); }
+.my-item:nth-child(2):hover { background-color: hsl(20, 30%, 50%); }
+.my-item:nth-child(3):hover { background-color: hsl(40, 30%, 50%); }
+.my-item:nth-child(4):hover { background-color: hsl(60, 30%, 50%); }
+.my-item:nth-child(5):hover { background-color: hsl(80, 30%, 50%); }
+.my-item:nth-child(6):hover { background-color: hsl(100, 30%, 50%); }
+.my-item:nth-child(7):hover { background-color: hsl(120, 30%, 50%); }
+.my-item:nth-child(8):hover { background-color: hsl(140, 30%, 50%); }
+.my-item:nth-child(9):hover { background-color: hsl(160, 30%, 50%); }
+.my-item:nth-child(10):hover { background-color: hsl(180, 30%, 50%); }
 
 #cover {
   position: absolute;
